--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(aoc25 VERSION 1.0)
 include(cmake/clang_tidy.cmake)
 include(cmake/solutions.cmake)
 
+add_subdirectory(helpers)
+
 add_subdirectory(solutions/day01)
